# cpp_task2

./: CMakeLists.txt  Customer.cpp  Customer.h  Organization.cpp  Organization.h  OrganizationalUnit.cpp  OrganizationalUnit.h  Product.cpp  Product.h  Provider.cpp  Provider.h  README.md  RetailCustomer.cpp  RetailCustomer.h  Store.cpp  Store.h  Truck.cpp  Truck.h  Warehouse.cpp  Warehouse.h  WholesaleCustomer.cpp  WholesaleCustomer.h  main.cpp
